# LLMOps-Ecom-Agent

./: main.py  pyproject.toml  readme.md  requirements.txt  scrapper_ui.py
.claude/: settings.local.json
data/: product_reviews.csv
ecomm_prod_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp_tutorial/: calculator.py  client.py  weather.py
prod_assistant/config/: config.yml
prod_assistant/ecomm_prod_assistant.egg-info/: requires.txt  top_level.txt
prod_assistant/etl/: amazon_scraper.py  data_ingestion.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/exception/: custom_exception.py
prod_assistant/logger/: __init__.py  custom_logger.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/notebooks/: experiment_exception.ipynb  experiment_logger.ipynb
prod_assistant/prompt_library/: prompts.py
prod_assistant/retrievar/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  modal_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
templates/: index.html
